--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <title>Chapter One</title>
+    <meta
+      name="description"
+      content="Building bespoke websites for businesses in the UK, professionally designed, custom coded, and SEO optimised. Fast Delivery, Tailored to your specific needs."
+    />
+    <meta name="author" content="CodeYard" />
+    <meta
+      name="keywords"
+      content="Websites, locally, web development, United Kingdom, UK, England, web design, services, company"
+    />
+    <link rel="icon" href="./public/co-logo.png" type="image/png" sizes="any" />
+    <link rel="icon" type="image/svg+xml" href="/public/co-logo.svg" />
   </head>
   <body>
     <div id="root"></div>
