added meta tags to html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <title>Chapter One</title>
-    <meta
-      name="description"
-      content="Building bespoke websites for businesses in the UK, professionally designed, custom coded, and SEO optimised. Fast Delivery, Tailored to your specific needs."
-    />
-    <meta name="author" content="CodeYard" />
+    <meta name="description" content="Refine your CV with the power of AI" />
+    <meta name="author" content="Chapter One" />
     <meta
       name="keywords"
-      content="Websites, locally, web development, United Kingdom, UK, England, web design, services, company"
+      content="resume, cv, optimise, improve, hiring, recruiter, service, "
     />
     <link rel="icon" href="./public/co-logo.png" type="image/png" sizes="any" />
     <link rel="icon" type="image/svg+xml" href="/public/co-logo.svg" />
