--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
       name="keywords"
       content="resume, cv, optimise, improve, hiring, recruiter, service, "
     />
-    <link rel="icon" href="./public/co-logo.png" type="image/png" sizes="any" />
-    <link rel="icon" type="image/svg+xml" href="/public/co-logo.svg" />
+    <link
+      rel="icon"
+      href="./src/assets/co-logo.png"
+      type="image/png"
+      sizes="any"
+    />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/co-logo.svg" />
   </head>
   <body>
     <div id="root"></div>
