--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     />
     <link
       rel="icon"
-      href="./src/assets/co-logo.png"
+      href="./src/public/co-logo.png"
       type="image/png"
       sizes="any"
     />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/co-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/public/co-logo.svg" />
   </head>
   <body>
     <div id="root"></div>
